[gd_scene load_steps=4 format=3 uid="uid://08lioqrs31o3"]

[ext_resource type="Script" path="res://ui/Menu/select.gd" id="1_17llp"]
[ext_resource type="PackedScene" uid="uid://c2eemep8skl7h" path="res://ui/ui_button.tscn" id="1_gap42"]
[ext_resource type="Texture2D" uid="uid://c20d1f3ovy4an" path="res://assets/ui/round_nine_patch.png" id="2_t663w"]

[node name="Select" type="Node2D"]
script = ExtResource("1_17llp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Panel" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Control/VBoxContainer/Panel"]
self_modulate = Color(0.194764, 0.209667, 0.295981, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture = ExtResource("2_t663w")
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 7
patch_margin_bottom = 15

[node name="StatsContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/Panel/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VScrollBar" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
horizontal_scroll_mode = 0

[node name="ClassContainer" type="GridContainer" parent="CanvasLayer/Control/VBoxContainer/Panel/VScrollBar"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/Panel/VScrollBar/ClassContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/Panel/VScrollBar/ClassContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/Panel/VScrollBar/ClassContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Play" parent="CanvasLayer/Control/VBoxContainer" instance=ExtResource("1_gap42")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "PLAY"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Play" to="." method="_on_play_pressed"]
